[workspace]
members = ["xtask"]

[package]
name = "thread-opt"
version = "0.1.0"
edition = "2024"
description = "A thread optimization tool."
authors = ["Tools-cx-app"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Tools-cx-app/thread-opt/"

[dependencies]
anyhow = "1.0.102"
glob = "0.3.3"
inotify = "0.11.1"
libc = "0.2.183"
log = "0.4.29"
procfs = "0.18.0"
thiserror = "2.0.18"
env_logger = "0.11.9"
bytemuck = "1.25.0"

[build-dependencies]
anyhow = "1.0.102"
toml = "1.0.6"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
